// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DurationChartLoader overview chart with data shows the chart with the plottable data 1`] = `
[
  {
    "data": [
      [
        "2018-12-15",
        null,
      ],
      [
        "2018-12-16",
        null,
      ],
      [
        "2018-12-17",
        null,
      ],
      [
        "2018-12-18",
        null,
      ],
      [
        "2018-12-19",
        null,
      ],
      [
        "2018-12-20",
        null,
      ],
      [
        "2018-12-21",
        null,
      ],
      [
        "2018-12-22",
        null,
      ],
      [
        "2018-12-23",
        null,
      ],
      [
        "2018-12-24",
        null,
      ],
      [
        "2018-12-25",
        null,
      ],
      [
        "2018-12-26",
        null,
      ],
      [
        "2018-12-27",
        null,
      ],
      [
        "2018-12-28",
        null,
      ],
      [
        "2018-12-29",
        null,
      ],
      [
        "2018-12-30",
        null,
      ],
      [
        "2018-12-31",
        null,
      ],
      [
        "2019-01-01",
        0,
      ],
      [
        "2019-01-02",
        1032202,
      ],
      [
        "2019-01-03",
        1295998,
      ],
      [
        "2019-01-04",
        552478,
      ],
      [
        "2019-01-05",
        0,
      ],
      [
        "2019-01-06",
        0,
      ],
      [
        "2019-01-07",
        null,
      ],
      [
        "2019-01-08",
        0,
      ],
      [
        "2019-01-09",
        0,
      ],
      [
        "2019-01-10",
        null,
      ],
      [
        "2019-01-11",
        null,
      ],
      [
        "2019-01-12",
        null,
      ],
      [
        "2019-01-13",
        null,
      ],
      [
        "2019-01-14",
        null,
      ],
    ],
    "id": 1,
    "name": "issue",
  },
  {
    "data": [
      [
        "2018-12-15",
        null,
      ],
      [
        "2018-12-16",
        null,
      ],
      [
        "2018-12-17",
        null,
      ],
      [
        "2018-12-18",
        null,
      ],
      [
        "2018-12-19",
        null,
      ],
      [
        "2018-12-20",
        null,
      ],
      [
        "2018-12-21",
        null,
      ],
      [
        "2018-12-22",
        null,
      ],
      [
        "2018-12-23",
        null,
      ],
      [
        "2018-12-24",
        null,
      ],
      [
        "2018-12-25",
        null,
      ],
      [
        "2018-12-26",
        null,
      ],
      [
        "2018-12-27",
        null,
      ],
      [
        "2018-12-28",
        null,
      ],
      [
        "2018-12-29",
        null,
      ],
      [
        "2018-12-30",
        null,
      ],
      [
        "2018-12-31",
        null,
      ],
      [
        "2019-01-01",
        54760,
      ],
      [
        "2019-01-02",
        340918,
      ],
      [
        "2019-01-03",
        0,
      ],
      [
        "2019-01-04",
        0,
      ],
      [
        "2019-01-05",
        0,
      ],
      [
        "2019-01-06",
        237218,
      ],
      [
        "2019-01-07",
        null,
      ],
      [
        "2019-01-08",
        0,
      ],
      [
        "2019-01-09",
        0,
      ],
      [
        "2019-01-10",
        null,
      ],
      [
        "2019-01-11",
        null,
      ],
      [
        "2019-01-12",
        null,
      ],
      [
        "2019-01-13",
        null,
      ],
      [
        "2019-01-14",
        null,
      ],
    ],
    "id": 2,
    "name": "plan",
  },
  {
    "data": [
      [
        "2018-12-15",
        null,
      ],
      [
        "2018-12-16",
        null,
      ],
      [
        "2018-12-17",
        null,
      ],
      [
        "2018-12-18",
        null,
      ],
      [
        "2018-12-19",
        null,
      ],
      [
        "2018-12-20",
        null,
      ],
      [
        "2018-12-21",
        null,
      ],
      [
        "2018-12-22",
        null,
      ],
      [
        "2018-12-23",
        null,
      ],
      [
        "2018-12-24",
        null,
      ],
      [
        "2018-12-25",
        null,
      ],
      [
        "2018-12-26",
        null,
      ],
      [
        "2018-12-27",
        null,
      ],
      [
        "2018-12-28",
        null,
      ],
      [
        "2018-12-29",
        null,
      ],
      [
        "2018-12-30",
        null,
      ],
      [
        "2018-12-31",
        null,
      ],
      [
        "2019-01-01",
        0,
      ],
      [
        "2019-01-02",
        340918,
      ],
      [
        "2019-01-03",
        0,
      ],
      [
        "2019-01-04",
        0,
      ],
      [
        "2019-01-05",
        54760,
      ],
      [
        "2019-01-06",
        0,
      ],
      [
        "2019-01-07",
        null,
      ],
      [
        "2019-01-08",
        16416,
      ],
      [
        "2019-01-09",
        237218,
      ],
      [
        "2019-01-10",
        null,
      ],
      [
        "2019-01-11",
        null,
      ],
      [
        "2019-01-12",
        null,
      ],
      [
        "2019-01-13",
        null,
      ],
      [
        "2019-01-14",
        null,
      ],
    ],
    "id": 3,
    "name": "review",
  },
]
`;

exports[`DurationChartLoader stage chart with data shows the chart with the plottable data 1`] = `
[
  [
    "2018-12-15",
    null,
  ],
  [
    "2018-12-16",
    null,
  ],
  [
    "2018-12-17",
    null,
  ],
  [
    "2018-12-18",
    null,
  ],
  [
    "2018-12-19",
    null,
  ],
  [
    "2018-12-20",
    null,
  ],
  [
    "2018-12-21",
    null,
  ],
  [
    "2018-12-22",
    null,
  ],
  [
    "2018-12-23",
    null,
  ],
  [
    "2018-12-24",
    null,
  ],
  [
    "2018-12-25",
    null,
  ],
  [
    "2018-12-26",
    null,
  ],
  [
    "2018-12-27",
    null,
  ],
  [
    "2018-12-28",
    null,
  ],
  [
    "2018-12-29",
    null,
  ],
  [
    "2018-12-30",
    null,
  ],
  [
    "2018-12-31",
    null,
  ],
  [
    "2019-01-01",
    0,
  ],
  [
    "2019-01-02",
    1032202,
  ],
  [
    "2019-01-03",
    1295998,
  ],
  [
    "2019-01-04",
    552478,
  ],
  [
    "2019-01-05",
    0,
  ],
  [
    "2019-01-06",
    0,
  ],
  [
    "2019-01-07",
    null,
  ],
  [
    "2019-01-08",
    0,
  ],
  [
    "2019-01-09",
    0,
  ],
  [
    "2019-01-10",
    null,
  ],
  [
    "2019-01-11",
    null,
  ],
  [
    "2019-01-12",
    null,
  ],
  [
    "2019-01-13",
    null,
  ],
  [
    "2019-01-14",
    null,
  ],
]
`;
